# GodotProjectTemplate

./: .engine-prepare.bat  .engine-test-full.bat  .engine-test-run.ps1  .engine-test.bat  .engine-test.ps1  .gitignore  .gitmodules  egent.bat  egent.py  ethan.bat  loop.bat  main.tscn  mcp_handler.gd  offside_tool.gd  offside_tool.gd.uid  project.godot  pyrightconfig.json  readme.md
.agents/: mcp.json
.cursor/: mcp.json
.egent/: .gitignore  agent_config.py  main.py  mcp.json  pylintrc  requirements.txt  test_shell_tool_exec_command.py  tool_handlers.py
.egent/agent/: README.md  __init__.py  agent_client.py  agent_config.py  agent_events.py  agent_tools.py  data_loader.py  mcp_bridge.py  tool_binding.py
.egent/agents/: config.toml  mcp.json  (+1 more)
.ethan/: .gitignore  config.toml  main.py  mcp.json
.loop/: agent_session.py  bridge_host.py  config.py  git_ops.py  loop_log.py  main.py  markers.py  orchestrator.py  plan_extract.py  requirements.txt  run.ps1
.loops/: agent_dev.py  pyproject.toml
.mcp/: game_client.py  server.py
.python/: example.py  pyproject.toml
.python/egent/: .gitignore  __init__.py  __main__.py  builtin_tools.py  conversation.py  model_settings.py  pyproject.toml  tool.py  walk_files.py
.python/egent/builtin_tools/: __init__.py  read_tools.py  readonly_tools.py  walk_file.py
egent_handlers/: main.py  mcp_handler.gd  pyrightconfig.json
main/: game_mcp_demo_handler.gd  game_mcp_demo_handler.gd.uid  main.gd  main.gd.uid  main.tscn
tests/: README.md  hello_test.gd  offside_mcp_test.gd.uid  offside_test.gd  offside_test.gd.uid  test.gd
(+273 files in other folders)
