[project]
name = "godot-template-python"
version = "0.0.0"
description = "Godot 模板项目的 Python 侧车依赖"
requires-python = ">=3.11"
dependencies = [
    "egent @ git+https://github.com/EEEEEEEEthan/egent.git@main",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
